feat: bind candlestick data to DataWindow + fix trading profile settings persistence
- Add candlestick selection callback to CandleStickChart
- Implement getCandleAtPosition() to determine clicked candle
- Forward candle selection to DataWindow for OHLCV display
- Add ChartContainer.setCandleSelectionCallback() wrapper
- Integrate candle click handling in TradingWindow chart creation
- Add OpenAI configuration fields to TradingProfile record
- Persist and load OpenAI settings (apiKey, model, temperature)
- Add configureOpenAI() method in TradingProfileSettingsPanel
- Implement save/reset/close dialogs with confirmation
- All settings now properly saved and restored